--- a/options.html
+++ b/options.html
@@ -1,12 +1,12 @@
 <!-- -
-Trump Filter - Options Page
+Kardashian Filter - Options Page
 
 Allows user to adjust filtration settings.
  --> 
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Options for Trump Filter</title>
+	<title>Options for Kardashian Filter</title>
 	<script type="text/javascript" src="js/analytics.js"></script>
 </head>
 <body>
@@ -28,8 +28,8 @@ Allows user to adjust filtration settings.
 		</div>
 		<div id="footer">
 			<p>This work is licensed under <a
-        href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>. Created by <a
-      href="http://brooklynhacker.com">Rob Spectre</a>. Lovingly crafted in Brooklyn, NY.</p>
+        href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>. Created by PRINCE MANJEE. 
+        <BR/> Lovingly crafted in CHICAGO.</p>
 		</div>
 	</div>
 	<script type="text/javascript" src="js/options.js"></script>
